--- a/resources/views/crud/index.edge
+++ b/resources/views/crud/index.edge
@@ -97,7 +97,7 @@
                
                 <td>
                   @if(hasShow)
-                  <a href="{{ route(resourceRoute + '.show', {id : data.id}) }}" class="btn btn-default btn-xs">
+                  <a href="{{ route(resourceRoute + '.show', {id : data.id}) }}" class="btn btn-primary btn-xs">
                       <i class="icon-eye"></i> Details
                     </a>
                   @endif
