--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -1,4 +1,4 @@
-  <ul class="nk-menu">
+  <ul class="nk-menu admin-menu">
     <li class="nk-menu-item">
       <a href="{{ route('admin.dashboard') }}" class="nk-menu-link">
           <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
