--- a/resources/views/includes/app_navigation.edge
+++ b/resources/views/includes/app_navigation.edge
@@ -41,7 +41,7 @@
 <li class="nk-menu-item">
   <a href="{{ route('app.supports.index') }}" class="nk-menu-link">
       <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
-      <span class="nk-menu-text">Support</span>
+      <span class="nk-menu-text">Account Manager</span>
   </a>
 </li>
 <li class="nk-menu-item">
