--- a/resources/views/app/faqs/index.edge
+++ b/resources/views/app/faqs/index.edge
@@ -5,8 +5,8 @@
 @section('content')
 <div class="row">
     <div class="col-md-12 mt20">
-      <!-- <div class="card support-pane-card"> -->
-       
+     <div class="card support-pane-card">
+
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4 class="card-title mb-0"> FAQs</h4>
@@ -19,14 +19,14 @@
                 <a href="#collapse{{ $loop.index }}" class="text-dark" data-toggle="collapse"
                         aria-expanded="true"
                         aria-controls="collapseOne">
-                    {{ faq.question }} 
+                    {{ faq.question }}
                 </a>
             </h6>
         </div>
 
         <div id="collapse{{ $loop.index }}" class="collapse"
                 aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body" style="padding: 10px;">
+            <div class="card-body faq-card-body " style="padding: 10px;">
                 {{ faq.answer }}
             </div>
         </div>
@@ -35,7 +35,7 @@
  
 </div>
 </div>
-<!-- </div> -->
+</div>
 </div>
 
 @endsection
