--- a/resources/views/app/supports/create.edge
+++ b/resources/views/app/supports/create.edge
@@ -9,7 +9,7 @@
     <div class="card support-pane-card">
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center mb-3">
-          <h4 class="card-title mb-0">New Support Message</h4>
+          <h4 class="card-title mb-0">New Message</h4>
         </div>
         <form class="forms-sample" method="POST" action="{{ route('app.supports.store') }}">
           {{ csrfField() }}
