--- a/resources/views/app/supports/index.edge
+++ b/resources/views/app/supports/index.edge
@@ -10,12 +10,12 @@
         <div class="card support-pane-card">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-3">
-              <h4 class="card-title mb-0">Support</h4>
+              <h4 class="card-title mb-0">Account Manager</h4>
               <div class="btn-toolbar mb-0 d-none d-sm-block" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group" role="group" aria-label="First group">
                   <a href="{{ route('app.supports.create') }}" class="btn btn-primary">
-                    <i class="mdi mdi-plus-circle"></i> 
-                    <span class="hidden-xs">New Support Message</span>
+                    <i class="mdi mdi-plus-circle"></i>
+                    <span class="hidden-xs">New Message</span>
                   </a>
                 </div>
               </div>
@@ -33,7 +33,7 @@
                 </div>
               </a>
             @else
-                <p class="text-center"> No Support Messages</p>
+                <p class="text-center"> No Messages</p>
             @endeach
           </div>
             <div class="d-flex float-right align-items-center mt-4">
