--- a/resources/views/app/supports/show.edge
+++ b/resources/views/app/supports/show.edge
@@ -1,7 +1,7 @@
 @layout('templates.main')
-@section('title') 
- Support Details
-@endsection 
+@section('title')
+  Message Details
+@endsection
 @section('content')
 
 <div class="row">
@@ -9,7 +9,7 @@
     <div class="card support-pane-card">
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center mb-3">
-          <h4 class="card-title mb-0"> Support Details</h4>
+          <h4 class="card-title mb-0"> Message Details</h4>
         </div>
         <div class="table-responsive support-pane no-wrap">
 
