--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -18,15 +18,18 @@
   <link href="/assets/css/whatsapp.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="nk-body bg-lighter npc-general has-sidebar ">
+<body class="nk-body npc-general has-sidebar ">
     <div class="nk-app-root">
         <div class="nk-main ">
             <div class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
                 <div class="nk-sidebar-element nk-sidebar-head">
-                    <div class="nk-sidebar-brand"><a href="/general/index.html" class="logo-link nk-sidebar-logo"><img
-                        class="logo-light logo-img" src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
-                        alt="logo"><img class="logo-dark logo-img" src="/assets/images/logo12.png"
-                        srcset="/assets/images/logo12.png 2x" alt="logo-dark"></a></div>
+                    <div class="nk-sidebar-brand"><a href="/general/index.html" class="logo-link nk-sidebar-logo">
+                        <img
+                        class="logo-light logo-img " src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
+                        alt="logo">
+                        <img class="logo-dark logo-img" src="/assets/images/logo12.png"
+                        srcset="/assets/images/logo12.png 2x" alt="logo-dark">
+                    </a></div>
                     <div class="nk-menu-trigger mr-n2"><a href="#" class="nk-nav-toggle nk-quick-nav-icon d-xl-none"
                             data-target="sidebarMenu"><em class="icon ni ni-arrow-left"></em></a></div>
                 </div>
@@ -41,7 +44,7 @@
                 </div>
             </div>
             <div class="nk-wrap ">
-                <div class="nk-header nk-header-fixed is-light">
+                <div class="nk-header nk-header-fixed is-dark">
                     <div class="container-fluid">
                         <div class="nk-header-wrap">
                             <div class="nk-menu-trigger d-xl-none ml-n1"><a href="#"
@@ -49,7 +52,7 @@
                                         class="icon ni ni-menu"></em></a></div>
                             <div class="nk-header-brand d-xl-none"><a href="/" class="logo-link"><img
                                         class="logo-light logo-img" src="/assets/images/logo-dark.png"
-                                        srcset="/assets/images/logo-dark.png 2x" alt="logo"><img class="logo-dark logo-img"
+                                        srcset="/assets/images/logo-dark.png 2x" width="220px" alt="logo"><img class="logo-dark logo-img"
                                         src="/images/logo-dark.png" srcset="/assets/images/logo-dark.png 2x"
                                         alt="logo-dark"><span class="nio-version">General</span></a></div>
                             <div class="nk-header-tools">
@@ -104,7 +107,7 @@
                     </div>
                 </div>
                 <div class="nk-content ">
-                    <div class="container-fluid">
+                    <div class="container-fluid" style="background: #e5e9f2">
                         <div class="nk-content-inner">
                             <div class="nk-content-body">
                                 @include('includes.alert')
