--- a/resources/views/templates/index.edge
+++ b/resources/views/templates/index.edge
@@ -21,7 +21,7 @@
         <h6 class="small tnav1"><b>Nigeria's #1 Digital Property Platform</b> </h6>
       </div>
       <div class="col-md-4 text-center px-5 py-2">
-        <h6 class="small tnav1"><b>Helpline: +234 (0) 811 775 8384</b> </h6>
+        <h6 class="small tnav1"><a class="helpline" href="tel:+2348077535390">Helpline: +2348077535390</a> </h6>
       </div>
       <div class="col-md-4 text-right d-none d-md-block">
         <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook p-2 mx-2  text-white"></i></a>
@@ -89,7 +89,7 @@
         <h6 class="mt-3 text-white">We are Nigeria’s 1st Property tech company whose mission is to end the problem of
           shelter in Nigeria, one building at a time.</h6>
         <b></span><br> <span class="text-success">info@landcrowdy.com.ng</span> </h5>
-          </span><br> <span class="text-white">+234-811-775-8384</span> </h5></b><br><br>
+          </span><br> <span class="text-white">+234-807-7535-390</span> </h5></b><br><br>
         <a href="https://www.facebook.com/landcrowdy"><i class="fa fa-facebook  mx-1 text-success"></i></a>
         <a href="https://twitter.com/landcrowdy"><i class="fa fa-twitter mx-1 text-success"></i></a>
         <a href="https://www.youtube.com/channel/UC_-dJh9ghvUuv4crwOZfbuQ"><i
