--- a/resources/views/app/packages/choose.edge
+++ b/resources/views/app/packages/choose.edge
@@ -1,6 +1,6 @@
 @layout('templates.main')
 @section('title')
-New Package
+New Project
 @endsection
 @section('content')
 
@@ -23,7 +23,7 @@ New Package
               <div class="row g-gs">
                   <div class="col-lg-7">
                       <div class="invest-field form-group">
-                        <div class="form-label-group"><label class="form-label">Choose Package</label>
+                        <div class="form-label-group"><label class="form-label">Choose Project</label>
                         </div>
                         <input type="hidden" value="silver"
                               name="iv-plan" id="invest-choose-plan">
@@ -34,7 +34,7 @@ New Package
                                       <div class="coin-icon"><em
                                               class="icon ni ni-offer-fill"></em></div>
                                               <div class="coin-info"><span
-                                                class="coin-name">{{ projects[0].name }}</span>
+                                                class="coin-name"> {{ projects[0].flats }} - {{ projects[0].name }}</span>
                                                 <span
                                                         class="coin-text">Invest for {{ projects[0].duration }} years and
                                                 get annual return of {{{ moneyFormat(projects[0].annum_return) }}}</div>
@@ -51,9 +51,9 @@ New Package
                                                           class="icon ni ni-offer-fill"></em>
                                                   </div>
                                                   <div class="coin-info">
-                                                <span class="hidden capital"> {{ project.capital }} </span>
+                                                    <span class="capital hidden">{{ project.capital }}</span>
                                                     <span
-                                                  class="coin-name">{{ project.name }}</span><span
+                                                  class="coin-name"> {{ project.flats }} - {{ project.name }}</span><span
                                                           class="coin-text">Invest for <span class="duration">{{ project.duration }}</span> years and
                                                   get annual return of <span class="annual_return">{{{ moneyFormat(project.annum_return) }}}</span></span></div>
                                               </div>
@@ -99,7 +99,7 @@ New Package
                                             <div class="coin-item">
                                                 <div class="coin-icon"><em class="icon ni ni-sign-btc"></em></div>
                                                 <div class="coin-info"><span
-                                                        class="coin-name">Crowd Payment</span><span
+                                                        class="coin-name">Part Payment</span><span
                                                         class="coin-text">Pay what you have and the project starts the slot is filled</span></div>
                                             </div>
                                         </a></li>
@@ -112,7 +112,7 @@ New Package
                           <div class="form-label-group"><label class="form-label">Choose Quick
                                   Amount to Invest</label></div>
                           <div class="invest-amount-group g-2">
-                            @each(amount in [100000, 200000, 500000, 1000000])
+                            @each(amount in [minInvestment, ((maxInvestment - minInvestment) / 5 + +minInvestment),  ((maxInvestment - minInvestment) / 4 + +minInvestment), maxInvestment])
                               <div class="invest-amount-item" data-amount="{{ amount }}"><input type="radio"
                                       class="invest-amount-control" name="iv-amount"
                               id="iv-amount-{{amount}}"><label class="invest-amount-label"
@@ -120,19 +120,8 @@ New Package
                                 @endeach
                           </div>
                       </div>
-                      <div class="invest-field form-group">
-                          <div class="form-label-group"><label class="form-label">Or Enter Your
-                                  Amount</label>
-                          </div>
-                          <div class="form-control-group">
-                              <div class="form-info">NGN</div><input type="number"
-                                  class="form-control form-control-amount form-control-lg"
-                                  id="custom-amount" value="100.00">
-                              <div class="form-range-slider" id="amount-step"></div>
-                          </div>
-                          <div class="form-note pt-2">Note: Minimum invest 100 NGN and upto 2,000
-                              NGN</div>
-                      </div>
+                      <span class="hidden" id="min_investment"> {{ minInvestment }} </span>
+                      <span class="hidden" id="max_investment"> {{ maxInvestment }} </span>
                     </div>
                       <div class="invest-field form-group">
                           <div class="form-label-group"><label class="form-label">Choose Payment
@@ -145,7 +134,7 @@ New Package
                                               class="icon ni ni-wallet-alt"></em></div>
                                               <div class="coin-info"><span
                                                 class="coin-name">Online Payment</span><span
-                                                class="coin-text">Package Starts immediately</span></div>
+                                                class="coin-text">Project Starts immediately</span></div>
                                   </div>
                               </a>
                               <div class="dropdown-menu dropdown-menu-auto dropdown-menu-mxh">
@@ -158,7 +147,7 @@ New Package
                                                   </div>
                                                   <div class="coin-info"><span
                                                           class="coin-name">Online Payment</span><span
-                                                          class="coin-text">Package Starts immediately</span></div>
+                                                          class="coin-text">Project Starts immediately</span></div>
                                               </div>
                                           </a></li>
                                       <li class="invest-cc-item selected select-payment-method"><a href="javascript:void(0)"
@@ -168,19 +157,12 @@ New Package
                                                           class="icon ni ni-sign-btc"></em></div>
                                                   <div class="coin-info"><span
                                                           class="coin-name">Bank Deposit</span><span
-                                                          class="coin-text">Package Runs After Payment Verification</span></div>
+                                                          class="coin-text">Project Runs After Payment Verification</span></div>
                                               </div>
                                           </a></li>
                                   </ul>
                               </div>
                           </div>
-                      </div>
-                      <div class="invest-field form-group">
-                          <div class="custom-control custom-control-xs custom-checkbox"><input
-                                  type="checkbox" class="custom-control-input"
-                                  id="checkbox"><label class="custom-control-label"
-                                  for="checkbox">I agree the <a href="javascript:void(0)">terms and &amp;
-                                      conditions.</a></label></div>
                       </div>
                   </div>
                   <div class="col-xl-4 col-lg-5 offset-xl-1">
@@ -194,28 +176,20 @@ New Package
                                           <div class="lead-text" id="name_of_scheme">Please Select Project</div>
                                       </li>
                                       <li>
-                                          <div class="sub-text">Term of the scheme</div>
-                                          <div class="lead-text" id="duration_of_scheme">Please Select  Project</div>
+                                          <div class="sub-text">Investment Duration</div>
+                                          <div class="lead-text" id="duration_of_scheme">Please Select Project</div>
                                       </li>
                                       <li>
                                         <div class="sub-text">Capital</div>
+                                        <span class="hidden" id="capital__plain_text"></span>
                                         <div class="lead-text" id="capital">Please Select Project</div>
                                     </li>
                                       <li>
-                                          <div class="sub-text">Total Return</div>
+                                          <div class="sub-text">Annual Return</div>
                                           <div class="lead-text" id="annual_return">Please Select  Project</div>
                                       </li>
                                   </ul>
                               </div>
-                              <div class="nk-iv-wg4-sub">
-                                  <ul class="nk-iv-wg4-list">
-                                      <li>
-                                          <div class="sub-text">Payment Method</div>
-                                          <div class="lead-text" id="paymentMethod">Please Select</div>
-                                      </li>
-                                  </ul>
-                              </div>
-
                               <div class="nk-iv-wg4-sub">
                                 <ul class="nk-iv-wg4-list">
                                     <li>
@@ -233,8 +207,24 @@ New Package
                                       </li>
                                   </ul>
                               </div>
+                              <div class="nk-iv-wg4-sub">
+                                <ul class="nk-iv-wg4-list">
+                                    <li>
+                                        <div class="sub-text">Payment Method</div>
+                                        <div class="lead-text" id="paymentMethod">Please Select</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="nk-iv-wg4-sub">
+                                <ul class="nk-iv-wg4-list">
+                                    <li>
+                                        <div class="sub-text text-center">By Clicking the button below you agree to our <a href="/terms">terms and condition</a></div>
+                                    </li>
+                                </ul>
+                            </div>
                               <div class="nk-iv-wg4-sub text-center bg-lighter">
-                                  <button href="javascript:void(0)"
+                                  <p class="choose-error" id="error"></p>
+                                  <button id="confirm_and_proceed"
                                       class="btn btn-lg btn-primary ttu" >Confirm &amp; proceed</button>
                                 </div>
                           </div>
@@ -246,11 +236,11 @@ New Package
   </div>
 </div>
 
-<form action="{{ route('app.packages.store') }}" method="POST">
-    <input type="hidden" name="plan_id" id="plan_id">
-    <input type="hidden" name="mode" id="form_payment_mode">
+<form action="{{ route('app.packages.store') }}" method="POST" id="choose_form">
+    <input type="hidden" name="project_id" id="project_id">
+    <input type="hidden" name="payment_mode" id="form_payment_mode">
     <input type="hidden" name="method" id="form_payment_method">
-    <input type="hidden" name="method" id="form_amount_to_invest">
+    <input type="hidden" name="amount" id="form_amount_to_invest">
     {{ csrfField() }}
 </form>
 @endsection
