--- a/resources/views/app/packages/choose.edge
+++ b/resources/views/app/packages/choose.edge
@@ -75,7 +75,7 @@ New Project
                                 data-toggle="dropdown">
                                 <div class="coin-item">
                                     <div class="coin-icon"><em
-                                            class="icon ni ni-wallet-alt"></em></div>
+                                            class="icon ni ni-shield-fill"></em></div>
                                             <div class="coin-info"><span
                                                 class="coin-name">Full Payment</span><span
                                                 class="coin-text">Pay full amount for project and get started immediately</span></div>
@@ -87,7 +87,7 @@ New Project
                                             class="invest-cc-opt" data-plan="silver">
                                             <div class="coin-item">
                                                 <div class="coin-icon"><em
-                                                        class="icon ni ni-wallet-alt"></em>
+                                                        class="icon ni ni-shield-fill"></em>
                                                 </div>
                                                 <div class="coin-info"><span
                                                         class="coin-name">Full Payment</span><span
@@ -97,7 +97,7 @@ New Project
                                     <li class="invest-cc-item selected select-payment-mode"><a href="javascript:void(0)"
                                             class="invest-cc-opt" data-plan="starter">
                                             <div class="coin-item">
-                                                <div class="coin-icon"><em class="icon ni ni-sign-btc"></em></div>
+                                                <div class="coin-icon"><em class="icon ni ni-shield-half"></em></div>
                                                 <div class="coin-info"><span
                                                         class="coin-name">Part Payment</span><span
                                                         class="coin-text">Pay what you have and the project starts the slot is filled</span></div>
@@ -131,7 +131,7 @@ New Project
                                   data-toggle="dropdown" id="select-payment-method">
                                   <div class="coin-item">
                                       <div class="coin-icon"><em
-                                              class="icon ni ni-wallet-alt"></em></div>
+                                              class="icon ni ni-visa"></em></div>
                                               <div class="coin-info"><span
                                                 class="coin-name">Online Payment</span><span
                                                 class="coin-text">Project Starts immediately</span></div>
@@ -143,7 +143,7 @@ New Project
                                               class="invest-cc-opt" data-plan="silver">
                                               <div class="coin-item">
                                                   <div class="coin-icon"><em
-                                                          class="icon ni ni-wallet-alt"></em>
+                                                          class="icon ni ni-visa"></em>
                                                   </div>
                                                   <div class="coin-info"><span
                                                           class="coin-name">Online Payment</span><span
@@ -154,7 +154,7 @@ New Project
                                               class="invest-cc-opt" data-plan="starter">
                                               <div class="coin-item">
                                                   <div class="coin-icon"><em
-                                                          class="icon ni ni-sign-btc"></em></div>
+                                                          class="icon ni ni-money"></em></div>
                                                   <div class="coin-info"><span
                                                           class="coin-name">Bank Deposit</span><span
                                                           class="coin-text">Project Runs After Payment Verification</span></div>
@@ -218,7 +218,7 @@ New Project
                             <div class="nk-iv-wg4-sub">
                                 <ul class="nk-iv-wg4-list">
                                     <li>
-                                        <div class="sub-text text-center">By Clicking the button below you agree to our <a href="/terms">terms and condition</a></div>
+                                        <div class="sub-text text-center">By clicking the button below you agree to our <a href="/terms">terms and condition</a></div>
                                     </li>
                                 </ul>
                             </div>
