--- a/resources/views/app/packages/invoice.edge
+++ b/resources/views/app/packages/invoice.edge
@@ -25,7 +25,7 @@ Invoice
             <div class="row">
               <div class="col-6"><address><strong>Billed To:</strong><br>{{ auth.user.getFullName() }} </address></div>
 
-              <div class="col-6 text-right"><address><strong>Digital Coop</strong><br>Lagos, Nigeria</address></div>
+              <div class="col-6 text-right"><address><strong>LandCrowdy</strong><br>Lagos, Nigeria</address></div>
             </div>
             <div class="row">
               <div class="col-6 m-t-30"><address><strong>Bank Account Information:</strong>
@@ -84,9 +84,8 @@ Invoice
                   </table>
                 </div>
                 <div class="d-print-none">
-                  <div class="float-right"><a href="javascript:window.print()" class="btn btn-success waves-effect waves-light"><i
+                  <div class="float-left"><a href="javascript:window.print()" class="btn btn-success waves-effect waves-light"><i
                        class="fa fa-print"></i></a> 
-                       <!-- <a href="#" class="btn btn-primary waves-effect waves-light">Send</a> -->
                       </div>
                 </div>
               </div>
