Fix admin packages page

--- a/resources/views/app/packages/choose.edge
+++ b/resources/views/app/packages/choose.edge
@@ -131,15 +131,15 @@ New Project
                                   data-toggle="dropdown" id="select-payment-method">
                                   <div class="coin-item">
                                       <div class="coin-icon"><em
-                                              class="icon ni ni-visa"></em></div>
+                                              class="icon ni ni-money"></em></div>
                                               <div class="coin-info"><span
-                                                class="coin-name">Online Payment</span><span
-                                                class="coin-text">Project Starts immediately</span></div>
+                                                class="coin-name">Bank Deposit</span><span
+                                                class="coin-text">Project Runs After Payment Verification</span></div>
                                   </div>
                               </a>
                               <div class="dropdown-menu dropdown-menu-auto dropdown-menu-mxh">
                                   <ul class="invest-cc-list">
-                                      <li class="invest-cc-item selected select-payment-method"><a href="javascript:void(0)"
+                                      <!--  <li class="invest-cc-item selected select-payment-method"><a href="javascript:void(0)"
                                               class="invest-cc-opt" data-plan="silver">
                                               <div class="coin-item">
                                                   <div class="coin-icon"><em
@@ -149,7 +149,7 @@ New Project
                                                           class="coin-name">Online Payment</span><span
                                                           class="coin-text">Project Starts immediately</span></div>
                                               </div>
-                                          </a></li>
+                                          </a></li>  -->
                                       <li class="invest-cc-item selected select-payment-method"><a href="javascript:void(0)"
                                               class="invest-cc-opt" data-plan="starter">
                                               <div class="coin-item">
