--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -21,7 +21,7 @@
 <body class="nk-body npc-general has-sidebar ">
     <div class="nk-app-root">
         <div class="nk-main ">
-            <div class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
+            <div id="nk-sidebar" class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
                 <div class="nk-sidebar-element nk-sidebar-head">
                     <div class="nk-sidebar-brand"><a href="/general/index.html" class="logo-link nk-sidebar-logo">
                         <img
@@ -30,7 +30,7 @@
                         <img class="logo-dark logo-img" src="/assets/images/logo12.png"
                         srcset="/assets/images/logo12.png 2x" alt="logo-dark">
                     </a></div>
-                    <div class="nk-menu-trigger mr-n2"><a href="#" class="nk-nav-toggle nk-quick-nav-icon d-xl-none"
+                    <div class="nk-menu-trigger-close mr-n2"><a href="#" class="nk-nav-toggle nk-quick-nav-icon d-xl-none"
                             data-target="sidebarMenu"><em class="icon ni ni-arrow-left"></em></a></div>
                 </div>
                 <div class="nk-sidebar-element">
@@ -43,18 +43,19 @@
                     </div>
                 </div>
             </div>
+            <div class="nk-sidebar-overlay" style="display: none" data-target="sidebarMenu"></div>
             <div class="nk-wrap ">
                 <div class="nk-header nk-header-fixed is-dark">
                     <div class="container-fluid">
                         <div class="nk-header-wrap">
-                            <div class="nk-menu-trigger d-xl-none ml-n1"><a href="#"
+                            <div class="nk-menu-trigger-open d-xl-none ml-n1"><a href="#"
                                     class="nk-nav-toggle nk-quick-nav-icon" data-target="sidebarMenu"><em
                                         class="icon ni ni-menu"></em></a></div>
                             <div class="nk-header-brand d-xl-none"><a href="/" class="logo-link"><img
                                         class="logo-light logo-img" src="/assets/images/logo-dark.png"
                                         srcset="/assets/images/logo-dark.png 2x" width="220px" alt="logo"><img class="logo-dark logo-img"
-                                        src="/images/logo-dark.png" srcset="/assets/images/logo-dark.png 2x"
-                                        alt="logo-dark"><span class="nio-version">General</span></a></div>
+                                        src="/assets/images/logo-dark.png" srcset="/assets/images/logo-dark.png 2x"
+                                        alt="logo-dark"></a></div>
                             <div class="nk-header-tools">
                                 <ul class="nk-quick-nav">
                                     <li class="dropdown user-dropdown order-sm-first"><a href="#" class="dropdown-toggle"
