--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -21,9 +21,10 @@
 <body class="nk-body npc-general has-sidebar ">
     <div class="nk-app-root">
         <div class="nk-main ">
+            <div class="nk-sidebar-overlay" style="display: none" data-target="sidebarMenu"></div>
             <div id="nk-sidebar" class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
                 <div class="nk-sidebar-element nk-sidebar-head">
-                    <div class="nk-sidebar-brand"><a href="/general/index.html" class="logo-link nk-sidebar-logo">
+                    <div class="nk-sidebar-brand"><a href="/" class="logo-link nk-sidebar-logo">
                         <img
                         class="logo-light logo-img " src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
                         alt="logo">
@@ -43,7 +44,6 @@
                     </div>
                 </div>
             </div>
-            <div class="nk-sidebar-overlay" style="display: none" data-target="sidebarMenu"></div>
             <div class="nk-wrap ">
                 <div class="nk-header nk-header-fixed is-dark">
                     <div class="container-fluid">
