--- a/resources/views/app/supports/index.edge
+++ b/resources/views/app/supports/index.edge
@@ -9,13 +9,13 @@
       <div class="col-md-12">
         <div class="card support-pane-card">
           <div class="card-body">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-              <h4 class="card-title mb-0">Account Manager</h4>
-              <div class="btn-toolbar mb-0 d-none d-sm-block" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="d-md-flex d-sm-block justify-content-between align-items-center mb-3">
+              <h4 class="card-title  mb-md-0 mb-sm-1">Support</h4>
+              <div class="btn-toolbar mb-0" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group" role="group" aria-label="First group">
                   <a href="{{ route('app.supports.create') }}" class="btn btn-primary">
                     <i class="mdi mdi-plus-circle"></i>
-                    <span class="hidden-xs">New Message</span>
+                    <span>New Message</span>
                   </a>
                 </div>
               </div>
