--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -21,17 +21,24 @@
 <body class="nk-body npc-general has-sidebar ">
     <div class="nk-app-root">
         <div class="nk-main ">
-            <div id="nk-sidebar" class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
+            <div id="nk-sidebar" 
+                class="nk-sidebar nk-sidebar-fixed is-dark" data-content="sidebarMenu">
                 <div class="nk-sidebar-element nk-sidebar-head">
-                    <div class="nk-sidebar-brand"><a href="/general/index.html" class="logo-link nk-sidebar-logo">
-                        <img
-                        class="logo-light logo-img " src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
-                        alt="logo">
-                        <img class="logo-dark logo-img" src="/assets/images/logo12.png"
-                        srcset="/assets/images/logo12.png 2x" alt="logo-dark">
-                    </a></div>
-                    <div class="nk-menu-trigger-close mr-n2"><a href="#" class="nk-nav-toggle nk-quick-nav-icon d-xl-none"
-                            data-target="sidebarMenu"><em class="icon ni ni-arrow-left"></em></a></div>
+                    <div class="nk-sidebar-brand">
+                        <a href="/general/index.html" class="logo-link nk-sidebar-logo">
+                            <img class="logo-light logo-img " 
+                                src="/assets/images/logo12.png" 
+                                srcset="/assets/images/logo12.png 2x" alt="logo">
+                            <img class="logo-dark logo-img" src="/assets/images/logo12.png"
+                                srcset="/assets/images/logo12.png 2x" alt="logo-dark">
+                        </a>
+                    </div>
+                    <div class="nk-menu-trigger-close mr-n2">
+                        <a href="#" class="nk-nav-toggle nk-quick-nav-icon d-xl-none"
+                            data-target="sidebarMenu">
+                            <em class="icon ni ni-arrow-left"></em>
+                        </a>
+                    </div>
                 </div>
                 <div class="nk-sidebar-element">
                     <div class="nk-sidebar-content">
