--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -52,9 +52,10 @@
                         <a class="nk-news-item" href="{{ route('app.referrals.index') }}">
                             <div class="nk-news-icon"><em class="icon ni ni-card-view"></em></div>
                             <div class="nk-news-text">
-                                <p>Do you know the latest update of 2019? <span> A overview of our
-                                        is now available on YouTube</span></p><em
-                                    class="icon ni ni-external"></em>
+                                <p>Referral link  display      
+                                    {{--  <span> A overview of our is now available on YouTube</span>  --}}
+                                </p>
+                                <em class="icon ni ni-external"></em>
                             </div>
                         </a>
                     </div>
