--- a/resources/views/app/referrals/index.edge
+++ b/resources/views/app/referrals/index.edge
@@ -7,9 +7,9 @@ Referrals
   <div class="col-md-12">
     <div class="card support-pane-card">
       <div class="card-body">
-        <div class="d-flex justify-content-between align-items-center mb-3">
+        <div class="d-md-flex d-sm-block justify-content-between align-items-center mb-3">
           <h4 class="card-title mb-0"> Referrals </h4>
-          <div class="btn-toolbar mb-0 d-none d-sm-block" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-toolbar mb-0" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group float-right" role="group" aria-label="First group">
               <a href="{{ route('auth.referral', {referral: auth.user.username}) }}" class="btn btn-primary">Your Ref
                 Link: {{ fullUrl }}{{ route('auth.referral', {referral: auth.user.username}) }}</a>
