--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -52,7 +52,8 @@
                         <a class="nk-news-item" href="{{ route('app.referrals.index') }}">
                             <div class="nk-news-icon"><em class="icon ni ni-card-view"></em></div>
                             <div class="nk-news-text">
-                                <p>Referral link  display      
+                                <p>Referral link: 
+                                    {{ fullUrl }}{{ route('auth.referral', {referral: auth.user.username}) }}     
                                     {{--  <span> A overview of our is now available on YouTube</span>  --}}
                                 </p>
                                 <em class="icon ni ni-external"></em>
