--- a/resources/views/app/dashboard.edge
+++ b/resources/views/app/dashboard.edge
@@ -51,8 +51,8 @@
                     <div class="nk-news-list">
                         <a class="nk-news-item" href="{{ route('app.referrals.index') }}">
                             <div class="nk-news-icon"><em class="icon ni ni-card-view"></em></div>
-                            <div class="nk-news-text">
-                                <p>Referral link: 
+                            <div class="nk-news-text" style="width:100%;max-width:100%">
+                                <p style="text-overflow:inherit;width:50%">Referral link: 
                                     {{ fullUrl }}{{ route('auth.referral', {referral: auth.user.username}) }}     
                                     {{--  <span> A overview of our is now available on YouTube</span>  --}}
                                 </p>
