--- a/resources/views/app/packages/view_update.edge
+++ b/resources/views/app/packages/view_update.edge
@@ -23,7 +23,11 @@
     <div class="col-md-6">
         <div class="card support-pane-cars">
             <div class="card-body">
-                <img src="/assets/images/properties/2.jpg"/>
+                @if(package.project.feature_img)
+                    <img src="{{ package.project.feature_img }}"/>
+                @else
+                    <img src="/assets/images/properties/2.jpg"/>
+                @endif
             </div>
         </div>
     </div>
@@ -33,7 +37,7 @@
                 <div class="table-responsive support-pane no-wrap">
                     <div class="t-row">
                         <p class="font-weight-bold mb-0 d-inline-block">LOCATION:</p>
-                        <p class="mb-1">OBANIKORO</p>
+                        <p class="mb-1">{{ package.project.name }}</p>
                     </div>
                     <div class="t-row">
                         <p class="font-weight-bold mb-0 d-inline-block">PROPERTY OVERVIEW</p>
