--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/assets/css/app.theme.css?ver=1.1.0">
   <link rel="stylesheet" href="/assets/css/custom.css">
   <link href="/assets/css/whatsapp.css" rel="stylesheet" type="text/css">
+  @!section('style')
 </head>
 
 <body class="nk-body npc-general has-sidebar ">
