--- a/resources/views/crud/edit.edge
+++ b/resources/views/crud/edit.edge
@@ -2,6 +2,9 @@
 @section('title')
   {{ editText }} {{ singleItem }}
 @endsection
+@section('style')
+  <link href="/assets/css/MultiFileUpload.css" rel="stylesheet" type="text/css">
+@endsection
 @section('content')
 
 <div class="row">
@@ -11,7 +14,9 @@
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h4 class="card-title mb-0">{{ editText }} {{ singleItem }}</h4>
         </div>
-        <form class="forms-sample" method="POST" action="{{ route(resourceRoute + '.update', {id : resourceDatum.id}) }}?_method=PUT">
+        <form class="forms-sample" method="POST" 
+          action="{{ route(resourceRoute + '.update', {id : resourceDatum.id}) }}?_method=PUT" 
+          enctype="multipart/form-data">
           {{ csrfField() }}
           @each(field in editAbles)
           <div class="form-group row">
@@ -25,6 +30,42 @@
                   </select>
                 @elseif(field.type == 'textarea')
                 <textarea class="form-control" id="input_{{ field.name }}" name="{{ field.name }}" placeholder="Enter {{ field.label }}">{{ resourceDatum[field.name] }}</textarea> 
+                @elseif(field.type == 'image')
+                    @if(resourceDatum[field.name])
+                      <p id="for_ad_image" class="valError text-danger small"></p>
+                      <div class="file-upload-previews">
+                          <div class="MultiFile-label">
+                              <a class="MultiFile-remove" href="#" id="removeAdImg" 
+                                  data-item-id="{{resourceDatum.id}}" 
+                                  data-img-name="{{ imageName(resourceDatum[field.name]) }}">x</a> 
+                              <span>
+                                  <span class="MultiFile-label" 
+                                      title="File selected: {{ imageName(resourceDatum[field.name]) }}">
+                                      <span class="MultiFile-title">
+                                          {{ imageName(resourceDatum[field.name]) }}
+                                      </span>
+                                      <img class="MultiFile-preview" 
+                                          style="max-height:100px;product max-width:100px;" 
+                                          src="{{ resourceDatum[field.name] }}">
+                                  </span>
+                              </span>
+                            <input type="hidden" name="previousImage" 
+                                value="{{ imageName(resourceDatum[field.name]) }}" />
+                          </div>
+                      </div>
+                    @endif
+                    @if(!resourceDatum[field.name])
+                      <div class="file-upload-previews"></div>
+                    @endif
+                    <div class="file-upload" style="{{resourceDatum[field.name] ? 'display:none':''}}">
+                        <input type="file" name="{{ field.name }}" 
+                          class="file-upload-input with-preview" 
+                          title="Click to add files" 
+                          maxlength="1" accept="jpg|png" 
+                          id="img">
+                        <span style="color:#000">CLICK OR DRAG IMAGES HERE</span>
+                        <input type="hidden" id="imgCount" value="1"/>
+                    </div>
                 @else
                 <input type="{{ field.type }}" class="form-control" id="input_{{ field.name }}" name="{{ field.name }}" placeholder="Enter {{ field.label }}" value="{{ resourceDatum[field.name] }}"> 
                 @endif
@@ -38,4 +79,8 @@
     </div>
   </div>
 </div>
+@endsection
+@section('scripts')
+  <script type="text/javascript" src="/assets/js/jQuery.MultiFile.min.js"></script>
+  <script type="text/javascript" src="/assets/js/MultiFileUpload.js"></script>
 @endsection
