--- a/resources/views/includes/app_navigation.edge
+++ b/resources/views/includes/app_navigation.edge
@@ -8,7 +8,7 @@
   <li class="nk-menu-item">
     <a href="{{ route('app.packages.index') }}" class="nk-menu-link">
         <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
-        <span class="nk-menu-text">My Projects</span>
+        <span class="nk-menu-text">My Sponsored Projects</span>
     </a>
   </li>
   <li class="nk-menu-item">
